# pherris

./: Cargo.toml  Dockerfile  TODO.md
.github/workflows/: fmt.yml  lint.yml  rust.yml  test.yml
docs/: feature-list.md
src/: lib.rs  main.rs
src/analyzer/: composer.rs  diagnostics.rs  mod.rs  parser.rs  query.rs  tree.rs  utils.rs
src/handlers/: notification.rs  request.rs
src/lsp/: backend.rs  config.rs  lsp.rs  mod.rs  state.rs  utils.rs
src/lsp/locator/: class_locator.rs  mod.rs  traits.rs
src/tree/: class.rs  mod.rs  utils.rs
tests/: go_to_definition_test.rs
