[package]
name = "pherris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "6.1.0"
serde = "1.0.218"
serde_json = "1.0.140"
streaming-iterator = "0.1.9"
tempfile = "3.15.0"
tokio = { version = "1.42.0", features = ["full"] }
tower-lsp = "0.20.0"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
tree-sitter = "0.24.5"
tree-sitter-php = "0.23.11"
